# OS_Kolokvium2

./: CMakeLists.txt  README.md
include/: CreationPolicies.h  LifetimePolicies.h  Singleton.h  ThreadingPolicies.h  config.h
src/: demo.cpp
tests/: test_singleton.cpp
